--- a/Meu treino4/estilo/style.css
+++ b/Meu treino4/estilo/style.css
@@ -1,13 +1,26 @@
-@charset "UTF-8"; 
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Roboto:wght@100;400&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+    
 }
 
 html, body {
     min-height: 100vh;
     background-color: dimgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +32,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -41,6 +56,12 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 4vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 .normal {
@@ -48,13 +69,27 @@ section {
 }
 
 .imagem {
-    background: black;
+    background-color: black;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
-    background: rgba(44, 44, 44, 0.753);
-    width: 400px;
+    display: inline-block;
+    background: rgba(44, 44, 44, 0.705);
+    padding: 5px;
+    text-shadow: 1.3px 1.3px 0px black;
+}
+
+#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: center;
+}
+
+#img02 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
